--- a/GS_10k_Q&A.ipynb
+++ b/GS_10k_Q&A.ipynb
@@ -3060,7 +3060,45 @@
           "text": [
             "Inferencing Samples:   0%|          | 0/62 [00:00<?, ? Batches/s]/usr/local/lib/python3.7/dist-packages/haystack/modeling/model/prediction_head.py:485: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
             "  start_indices = flat_sorted_indices // max_seq_len\n",
-            "Inferencing Samples:  71%|███████   | 44/62 [01:10<00:28,  1.60s/ Batches]"
+            "Inferencing Samples: 100%|██████████| 62/62 [01:37<00:00,  1.58s/ Batches]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Query: Who is the CFO?\n",
+            "Answers:\n",
+            "[   {   'answer': 'Mr. Coleman',\n",
+            "        'context': 'al Equities Trading and Execution Services from September '\n",
+            "                   '2016 to May\\n'\n",
+            "                   'Mr. Coleman has been Chief Financial Officer since January '\n",
+            "                   '2022. He had\\n'\n",
+            "                   'previous',\n",
+            "        'score': 0.8438294231891632},\n",
+            "    {   'answer': 'Mr. Berlinski',\n",
+            "        'context': 'been\\n'\n",
+            "                   'appointed by, and serve at the pleasure of, Group Inc.’s '\n",
+            "                   'Board.\\n'\n",
+            "                   'Mr. Berlinski has been Global Treasurer since October '\n",
+            "                   '2021; he also serves as\\n'\n",
+            "                   'Chi',\n",
+            "        'score': 0.5601659417152405},\n",
+            "    {   'answer': 'David',\n",
+            "        'context': ' 10-K.\\n'\n",
+            "                   'February 24, 2022EX-31.1 15 d192225dex311.htm EX-31.1  '\n",
+            "                   'EX-31.1\\n'\n",
+            "                   'I, David Solomon, certify that:\\n'\n",
+            "                   'I have reviewed this Annual Report on Form 10-K ',\n",
+            "        'score': 0.12633247673511505}]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ]
